[package]
name = "rust_for_mips"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[build-dependencies]
bindgen = "0.65.1"
walkdir = "2.3"

[dependencies]
panic-abort = { version = "0.3",optional = true }
libc = "0.2.159"
heapless = "0.7.0"

[features]
SUPPORT_RGB555LE = []
SHOW_FRM_BITRATE = []
SENSOR_GC2053 = []
SENSOR_GC2063 = []
default = ["panic-abort","SENSOR_GC2053"] 


